Creation search and sort, profile implementation

--- a/ModNationServer/ModNationServer.csproj
+++ b/ModNationServer/ModNationServer.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Processors.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerValues.cs" />
     <Compile Include="SessionManager.cs" />
   </ItemGroup>
   <ItemGroup>
